Project

General

Profile

Actions

Bug #43090

closed

mds:check if oldin is null before accessing its member

Added by shen hang over 4 years ago. Updated over 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

in mds/server : handle_client_rename:
CInode *oldin = 0;
if destdnl->is_null;
then oldin will be still 0;

it will crash when going to "if (destdnl->is_remote() && !oldin->is_auth())"
Actions #1

Updated by Patrick Donnelly over 4 years ago

  • Status changed from New to Need More Info
  • Assignee set to Patrick Donnelly
  • Target version set to v15.0.0

Can you share your cluster version, logs, and backtrace?

Actions #2

Updated by Patrick Donnelly over 4 years ago

  • Status changed from Need More Info to Fix Under Review
Actions #3

Updated by Patrick Donnelly over 4 years ago

  • Assignee changed from Patrick Donnelly to shen hang
Actions #4

Updated by Patrick Donnelly over 4 years ago

  • Status changed from Fix Under Review to Closed
Actions

Also available in: Atom PDF